# C-Libreria-estandar

./: CMakeLists.txt  README.md
Ejercicio1/: main.c
Ejercicio2/: main.c
Ejercicio3/: main.c
Ejercicio4/: main.c
